tests/idris2/perror001/expected
1/1: Building PError (PError.idr)
Error: Bracket is not properly closed.

PError.idr:4:7--4:8
   |
 4 | bar : (Int -> Int
   |       ^

